Fixed several layout issues. Fixed bug with entering multiple tests. Added test script to add form.

--- a/portal/public/stylesheets/style.styl
+++ b/portal/public/stylesheets/style.styl
@@ -657,17 +657,17 @@ i.display-create
 	height:20px;
 	opacity:1;
 .create-plan-form.display-create, .create-test-form.display-create
-	height:90px
+	height:175px
 .create-module-form button, .create-test-form button, .create-plan-form button, .general-form button
 	float:right;
 	padding:8px 15px;
 	color:white;
 .create-module-form input, .create-test-form input, .create-plan-form input
-	width:200px;
+	width:75%;
 	border: 1px solid #ddd;
 	margin-right:15px
 .create-plan-form textarea, .create-test-form textarea
-	width:200px;
+	width:75%;
 	padding-left:5px;
 	height:50px;
 	border: 1px solid #ddd;
